# twin

./: .gitignore  Makefile.am  README  configure.ac  main.cpp
data/fann/: xor.data
src/: AnnTrain.cpp  AnnTrain.h  FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  Form.cpp  Form.h  Makefile.am  main.cpp
test/: Makefile.am  t_facedetector.cpp  t_recognizer.cpp  test.cpp
